# LearningDeep

./: .gitignore  main.py  pyproject.toml
.github/workflows/: Learning_Deep_Guide_Book_Deploy.yml
dl elective course/assignments/: 1_assignment.ipynb  2_assignment.ipynb
dl elective course/assignments/.ipynb_checkpoints/: 1_assignment-checkpoint.ipynb
dl elective course/assignments/assignment 3/: 3_assignment.ipynb
dl elective course/assignments/assignment 3/data_gen/: data_gen.py  pyproject.toml
dl elective course/assignments/assignment 4/: 4_assignment.ipynb  MesoNet_checkpoint.pth
dl elective course/assignments/assignment 6/: 6_assignment.ipynb
dl elective course/assignments/assignment 7/: 7_assignment.ipynb
docs/: book.toml
docs/src/: RNN.md  SUMMARY.md  interpolation.md
docs/src/chapters/machine_learning/: LSTM.md  SequenceTransductionModel.md  bias&variance.md  regularization.md
docs/src/chapters/machine_learning/chainRule&GradientDescent/: GradientDescent.md  (+2 more)
docs/src/chapters/neural_network/: RNN.md  backpropagation.md  convolution.md  neural_network_basics.md
docs/src/machine_learning/: LSTM.md  bias&variance.md  wordEmbedding&word2Vec.md
docs/src/machine_learning/chainRule&GradientDescent/: chainRule.md  main.md
docs/src/neural_network/: neural_network_basics.md
docs/src/physics/einstein/: relativity.md
docs/src/prefix/: forewords.md  introduction.md
docs/src/quantam/basics/: basics.md
docs/src/scripts/: zoom.js
docs/src/vault/: interpolation.md
docs/src/vault/course/: intro.md  unit_1.md
docs/src/vault/papers/: main.md
(+4 files in other folders)
